# rust-particle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
particle/: Cargo.toml  README.md  cliff.toml
particle/.github/: settings.yml
particle/.github/workflows/: release-dist.yml  release-plz.yml  rust.yml  security-audit.yml  typos.yml
particle/src/: error.rs  lib.rs
particle/src/builders/: error.rs  mod.rs  traits.rs
particle/src/classes/: macros.rs  mod.rs  traits.rs
particle/src/configuration/: macros.rs  mod.rs  traits.rs
particle/src/identifiers/: macros.rs  mod.rs  traits.rs
particle/src/names/: macros.rs  mod.rs  traits.rs
particle/src/priorities/: macros.rs  mod.rs  traits.rs
particle/src/properties/: error.rs  mod.rs  modeled.rs  traits.rs
particle/src/states/: error.rs  macros.rs  mod.rs  traits.rs
particle/src/strings/: common.rs  descriptions.rs  icons.rs  labels.rs  mod.rs  tags.rs
particle/src/validation/: error.rs  macros.rs  mod.rs  traits.rs
particle/src/values/: map.rs  mod.rs  set.rs  timestamp.rs  traits.rs  vec.rs
particle/src/wrappers/: macros.rs  mod.rs  traits.rs
particle/tests/: test_lib.rs
src/: lib.rs
