[package]
name = "particle"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
description = "This package provides a simple component model for Rust libraries and tools."
documentation = "https://docs.rs/particle/"
repository = "https://github.com/johnstonskj/rust-particle.git"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
