[package]
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
name = "particle"
version = "0.1.0"
description = """Particle core"""
documentation = "https://docs.rs/particle/"
repository = "https://github.com/johnstonskj/rust-particle.git"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std", "tracing", "values-timestamp"]
alloc = []
std = ["alloc"]
modeled-properties = []
serde = []
tracing = ["dep:tracing"]
# move to intrinsics values-f16 = ["dep:half"]
values-timestamp = ["std"]

[dependencies]
# move to intrinsics half = { version = "2.6.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
pretty_assertions = "1.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
